<resources>
    <string name="app_name">Budget</string>
    <string name="app_title">Budget Expenses</string>
    <string name="set_account">Set account in settings</string>
    <string name="add_expense">Add</string>
    <string name="expense">Expense</string>
    <string name="expense_list">Expenses</string>
    <string name="cost">Cost</string>
    <string name="Description">Desc</string>
    <string name="delete">Delete</string>
    <string name="content_description_card_expense">Image of a dollar sign</string>
    <string name="limit">Limit</string>
    <string name="clear_form">Clear Form</string>
    <string name="add_new_account">Add new Account</string>
    <string name="account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="upload">UPLOAD</string>
</resources>